fixed z-index of cards

--- a/style.scss
+++ b/style.scss
@@ -345,9 +345,9 @@
   }
 }
 
-.higher-z-index {
-  z-index: 5;
-}
+// .higher-z-index {
+//   z-index: 5;
+// }
 
 .accordion {
   .head {
